Prepare backend for deployment