@@ -1,6 +1,8 @@
 package com.pwc.auditit.config;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -8,29 +10,39 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
+@RequiredArgsConstructor
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins}")
-    private String allowedOriginsRaw;
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
+        CorsConfiguration configuration = new CorsConfiguration();
 
-        // Configure CORS settings
-        config.setAllowedOrigins(origins);
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("Content-Type", "Authorization"));
-        config.setExposedHeaders(List.of("Authorization"));
-        config.setAllowCredentials(false); // false for JWT authentication (stateless)
-        config.setMaxAge(86400L); // 24 hours
+        // Set allowed origins from properties
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+
+        // Set allowed methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
+        // Set allowed headers
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // Set allow credentials
+        configuration.setAllowCredentials(true);
+
+        // Set max age for preflight requests
+        configuration.setMaxAge(3600L);
+
+        // Set exposed headers
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "Content-Disposition"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
+
